--- a/FAISS RAG/RAG.ipynb
+++ b/FAISS RAG/RAG.ipynb
@@ -25,14 +25,46 @@
    ],
    "source": [
     "import os\n",
+    "import re\n",
     "from langchain_community.vectorstores import FAISS\n",
     "from langchain_community.document_loaders import PyPDFLoader\n",
     "from langchain.text_splitter import CharacterTextSplitter\n",
     "from langchain_huggingface import HuggingFaceEmbeddings\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "from langchain_core.runnables import RunnablePassthrough, RunnableParallel\n",
     "\n",
     "VECTOR_STORE_PATH = \"./vectorstore\"\n",
-    "EMBEDDINGS = HuggingFaceEmbeddings(model_name=\"intfloat/multilingual-e5-small\")\n",
-    "\n",
+    "EMBEDDINGS_MODEL_NAME = \"intfloat/multilingual-e5-small\"\n",
+    "EMBEDDINGS = HuggingFaceEmbeddings(model_name=EMBEDDINGS_MODEL_NAME)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def clean_text(text):\n",
+    "    #Clean and preprocess text.\n",
+    "    #Remove hyphenation at line breaks\n",
+    "    text = re.sub(r'-\\n','',text)\n",
+    "    #Replace newlines within paragraphs with spaces\n",
+    "    text = re.sub(r'(?<!\\n)\\n(?!\\n)', ' ', text)\n",
+    "    #Remove multiple newlines\n",
+    "    text = re.sub(r'\\n+', '\\n', text)\n",
+    "    #Normalize whitespace\n",
+    "    text = re.sub(r'[ \\t]+', ' ', text)\n",
+    "    return text.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def create_vectorstore():\n",
     "    list_of_pdfs = [\n",
     "        \"pdfs/FairyTale1.pdf\",\n",
@@ -50,7 +82,12 @@
     "    documents = []\n",
     "    for pdf in list_of_pdfs:\n",
     "        loader = PyPDFLoader(pdf)\n",
-    "        documents += loader.load()\n",
+    "        pdf_documents = loader.load()\n",
+    "        # Clean the text in each document\n",
+    "        for doc in pdf_documents:\n",
+    "            cleaned_content = clean_text(doc.page_content)\n",
+    "            doc.page_content = cleaned_content\n",
+    "            documents.append(doc)\n",
     "\n",
     "    chunked_documents = text_splitter.split_documents(documents)\n",
     "\n",
@@ -59,6 +96,23 @@
     "\n",
     "    return vectorstore\n",
     "vectorstore = create_vectorstore()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_vectorstore():\n",
+    "    if os.path.exists(VECTOR_STORE_PATH):\n",
+    "        vectorstore = FAISS.load_local(VECTOR_STORE_PATH, EMBEDDINGS)\n",
+    "    else:\n",
+    "        vectorstore = create_vectorstore()\n",
+    "    return vectorstore\n",
+    "\n",
+    "def format_docs(docs):\n",
+    "    return \"\\n\\n\".join(doc.page_content for doc in docs)"
    ]
   },
   {
@@ -100,9 +154,6 @@
    "source": [
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import RunnablePassthrough, RunnableParallel\n",
-    "\n",
-    "def format_docs(docs):\n",
-    "    return \"\\n\\n\".join(doc.page_content for doc in docs)\n",
     "\n",
     "retriever = vectorstore.as_retriever()\n",
     "\n",
